build/src/core/qgssearchstringparser.output
Terminals which are not used

   UNKNOWN_CHARACTER


Grammar

    0 $accept: root $end

    1 root: search_cond

    2 search_cond: search_cond OR search_cond
    3            | search_cond AND search_cond
    4            | NOT search_cond
    5            | '(' search_cond ')'
    6            | predicate

    7 predicate: comp_predicate

    8 comp_predicate: scalar_exp COMPARISON scalar_exp

    9 scalar_exp: scalar_exp '*' scalar_exp
   10           | scalar_exp '/' scalar_exp
   11           | scalar_exp '+' scalar_exp
   12           | scalar_exp '-' scalar_exp
   13           | '(' scalar_exp ')'
   14           | '+' scalar_exp
   15           | '-' scalar_exp
   16           | NUMBER
   17           | STRING
   18           | COLUMN_REF


Terminals, with rules where they appear

$end (0) 0
'(' (40) 5 13
')' (41) 5 13
'*' (42) 9
'+' (43) 11 14
'-' (45) 12 15
'/' (47) 10
error (256)
NUMBER (258) 16
COMPARISON (259) 8
STRING (260) 17
COLUMN_REF (261) 18
UNKNOWN_CHARACTER (262)
NOT (263) 4
AND (264) 3
OR (265) 2
UMINUS (266)


Nonterminals, with rules where they appear

$accept (18)
    on left: 0
root (19)
    on left: 1, on right: 0
search_cond (20)
    on left: 2 3 4 5 6, on right: 1 2 3 4 5
predicate (21)
    on left: 7, on right: 6
comp_predicate (22)
    on left: 8, on right: 7
scalar_exp (23)
    on left: 9 10 11 12 13 14 15 16 17 18, on right: 8 9 10 11 12 13
    14 15


state 0

    0 $accept: . root $end

    NUMBER      shift, and go to state 1
    STRING      shift, and go to state 2
    COLUMN_REF  shift, and go to state 3
    NOT         shift, and go to state 4
    '+'         shift, and go to state 5
    '-'         shift, and go to state 6
    '('         shift, and go to state 7

    root            go to state 8
    search_cond     go to state 9
    predicate       go to state 10
    comp_predicate  go to state 11
    scalar_exp      go to state 12


state 1

   16 scalar_exp: NUMBER .

    $default  reduce using rule 16 (scalar_exp)


state 2

   17 scalar_exp: STRING .

    $default  reduce using rule 17 (scalar_exp)


state 3

   18 scalar_exp: COLUMN_REF .

    $default  reduce using rule 18 (scalar_exp)


state 4

    4 search_cond: NOT . search_cond

    NUMBER      shift, and go to state 1
    STRING      shift, and go to state 2
    COLUMN_REF  shift, and go to state 3
    NOT         shift, and go to state 4
    '+'         shift, and go to state 5
    '-'         shift, and go to state 6
    '('         shift, and go to state 7

    search_cond     go to state 13
    predicate       go to state 10
    comp_predicate  go to state 11
    scalar_exp      go to state 12


state 5

   14 scalar_exp: '+' . scalar_exp

    NUMBER      shift, and go to state 1
    STRING      shift, and go to state 2
    COLUMN_REF  shift, and go to state 3
    '+'         shift, and go to state 5
    '-'         shift, and go to state 6
    '('         shift, and go to state 14

    scalar_exp  go to state 15


state 6

   15 scalar_exp: '-' . scalar_exp

    NUMBER      shift, and go to state 1
    STRING      shift, and go to state 2
    COLUMN_REF  shift, and go to state 3
    '+'         shift, and go to state 5
    '-'         shift, and go to state 6
    '('         shift, and go to state 14

    scalar_exp  go to state 16


state 7

    5 search_cond: '(' . search_cond ')'
   13 scalar_exp: '(' . scalar_exp ')'

    NUMBER      shift, and go to state 1
    STRING      shift, and go to state 2
    COLUMN_REF  shift, and go to state 3
    NOT         shift, and go to state 4
    '+'         shift, and go to state 5
    '-'         shift, and go to state 6
    '('         shift, and go to state 7

    search_cond     go to state 17
    predicate       go to state 10
    comp_predicate  go to state 11
    scalar_exp      go to state 18


state 8

    0 $accept: root . $end

    $end  shift, and go to state 19


state 9

    1 root: search_cond .
    2 search_cond: search_cond . OR search_cond
    3            | search_cond . AND search_cond

    AND  shift, and go to state 20
    OR   shift, and go to state 21

    $default  reduce using rule 1 (root)


state 10

    6 search_cond: predicate .

    $default  reduce using rule 6 (search_cond)


state 11

    7 predicate: comp_predicate .

    $default  reduce using rule 7 (predicate)


state 12

    8 comp_predicate: scalar_exp . COMPARISON scalar_exp
    9 scalar_exp: scalar_exp . '*' scalar_exp
   10           | scalar_exp . '/' scalar_exp
   11           | scalar_exp . '+' scalar_exp
   12           | scalar_exp . '-' scalar_exp

    COMPARISON  shift, and go to state 22
    '*'         shift, and go to state 23
    '/'         shift, and go to state 24
    '+'         shift, and go to state 25
    '-'         shift, and go to state 26


state 13

    2 search_cond: search_cond . OR search_cond
    3            | search_cond . AND search_cond
    4            | NOT search_cond .

    $default  reduce using rule 4 (search_cond)


state 14

   13 scalar_exp: '(' . scalar_exp ')'

    NUMBER      shift, and go to state 1
    STRING      shift, and go to state 2
    COLUMN_REF  shift, and go to state 3
    '+'         shift, and go to state 5
    '-'         shift, and go to state 6
    '('         shift, and go to state 14

    scalar_exp  go to state 27


state 15

    9 scalar_exp: scalar_exp . '*' scalar_exp
   10           | scalar_exp . '/' scalar_exp
   11           | scalar_exp . '+' scalar_exp
   12           | scalar_exp . '-' scalar_exp
   14           | '+' scalar_exp .

    $default  reduce using rule 14 (scalar_exp)


state 16

    9 scalar_exp: scalar_exp . '*' scalar_exp
   10           | scalar_exp . '/' scalar_exp
   11           | scalar_exp . '+' scalar_exp
   12           | scalar_exp . '-' scalar_exp
   15           | '-' scalar_exp .

    $default  reduce using rule 15 (scalar_exp)


state 17

    2 search_cond: search_cond . OR search_cond
    3            | search_cond . AND search_cond
    5            | '(' search_cond . ')'

    AND  shift, and go to state 20
    OR   shift, and go to state 21
    ')'  shift, and go to state 28


state 18

    8 comp_predicate: scalar_exp . COMPARISON scalar_exp
    9 scalar_exp: scalar_exp . '*' scalar_exp
   10           | scalar_exp . '/' scalar_exp
   11           | scalar_exp . '+' scalar_exp
   12           | scalar_exp . '-' scalar_exp
   13           | '(' scalar_exp . ')'

    COMPARISON  shift, and go to state 22
    '*'         shift, and go to state 23
    '/'         shift, and go to state 24
    '+'         shift, and go to state 25
    '-'         shift, and go to state 26
    ')'         shift, and go to state 29


state 19

    0 $accept: root $end .

    $default  accept


state 20

    3 search_cond: search_cond AND . search_cond

    NUMBER      shift, and go to state 1
    STRING      shift, and go to state 2
    COLUMN_REF  shift, and go to state 3
    NOT         shift, and go to state 4
    '+'         shift, and go to state 5
    '-'         shift, and go to state 6
    '('         shift, and go to state 7

    search_cond     go to state 30
    predicate       go to state 10
    comp_predicate  go to state 11
    scalar_exp      go to state 12


state 21

    2 search_cond: search_cond OR . search_cond

    NUMBER      shift, and go to state 1
    STRING      shift, and go to state 2
    COLUMN_REF  shift, and go to state 3
    NOT         shift, and go to state 4
    '+'         shift, and go to state 5
    '-'         shift, and go to state 6
    '('         shift, and go to state 7

    search_cond     go to state 31
    predicate       go to state 10
    comp_predicate  go to state 11
    scalar_exp      go to state 12


state 22

    8 comp_predicate: scalar_exp COMPARISON . scalar_exp

    NUMBER      shift, and go to state 1
    STRING      shift, and go to state 2
    COLUMN_REF  shift, and go to state 3
    '+'         shift, and go to state 5
    '-'         shift, and go to state 6
    '('         shift, and go to state 14

    scalar_exp  go to state 32


state 23

    9 scalar_exp: scalar_exp '*' . scalar_exp

    NUMBER      shift, and go to state 1
    STRING      shift, and go to state 2
    COLUMN_REF  shift, and go to state 3
    '+'         shift, and go to state 5
    '-'         shift, and go to state 6
    '('         shift, and go to state 14

    scalar_exp  go to state 33


state 24

   10 scalar_exp: scalar_exp '/' . scalar_exp

    NUMBER      shift, and go to state 1
    STRING      shift, and go to state 2
    COLUMN_REF  shift, and go to state 3
    '+'         shift, and go to state 5
    '-'         shift, and go to state 6
    '('         shift, and go to state 14

    scalar_exp  go to state 34


state 25

   11 scalar_exp: scalar_exp '+' . scalar_exp

    NUMBER      shift, and go to state 1
    STRING      shift, and go to state 2
    COLUMN_REF  shift, and go to state 3
    '+'         shift, and go to state 5
    '-'         shift, and go to state 6
    '('         shift, and go to state 14

    scalar_exp  go to state 35


state 26

   12 scalar_exp: scalar_exp '-' . scalar_exp

    NUMBER      shift, and go to state 1
    STRING      shift, and go to state 2
    COLUMN_REF  shift, and go to state 3
    '+'         shift, and go to state 5
    '-'         shift, and go to state 6
    '('         shift, and go to state 14

    scalar_exp  go to state 36


state 27

    9 scalar_exp: scalar_exp . '*' scalar_exp
   10           | scalar_exp . '/' scalar_exp
   11           | scalar_exp . '+' scalar_exp
   12           | scalar_exp . '-' scalar_exp
   13           | '(' scalar_exp . ')'

    '*'  shift, and go to state 23
    '/'  shift, and go to state 24
    '+'  shift, and go to state 25
    '-'  shift, and go to state 26
    ')'  shift, and go to state 29


state 28

    5 search_cond: '(' search_cond ')' .

    $default  reduce using rule 5 (search_cond)


state 29

   13 scalar_exp: '(' scalar_exp ')' .

    $default  reduce using rule 13 (scalar_exp)


state 30

    2 search_cond: search_cond . OR search_cond
    3            | search_cond . AND search_cond
    3            | search_cond AND search_cond .

    OR  shift, and go to state 21

    $default  reduce using rule 3 (search_cond)


state 31

    2 search_cond: search_cond . OR search_cond
    2            | search_cond OR search_cond .
    3            | search_cond . AND search_cond

    $default  reduce using rule 2 (search_cond)


state 32

    8 comp_predicate: scalar_exp COMPARISON scalar_exp .
    9 scalar_exp: scalar_exp . '*' scalar_exp
   10           | scalar_exp . '/' scalar_exp
   11           | scalar_exp . '+' scalar_exp
   12           | scalar_exp . '-' scalar_exp

    '*'  shift, and go to state 23
    '/'  shift, and go to state 24
    '+'  shift, and go to state 25
    '-'  shift, and go to state 26

    $default  reduce using rule 8 (comp_predicate)


state 33

    9 scalar_exp: scalar_exp . '*' scalar_exp
    9           | scalar_exp '*' scalar_exp .
   10           | scalar_exp . '/' scalar_exp
   11           | scalar_exp . '+' scalar_exp
   12           | scalar_exp . '-' scalar_exp

    '+'  shift, and go to state 25
    '-'  shift, and go to state 26

    $default  reduce using rule 9 (scalar_exp)


state 34

    9 scalar_exp: scalar_exp . '*' scalar_exp
   10           | scalar_exp . '/' scalar_exp
   10           | scalar_exp '/' scalar_exp .
   11           | scalar_exp . '+' scalar_exp
   12           | scalar_exp . '-' scalar_exp

    '+'  shift, and go to state 25
    '-'  shift, and go to state 26

    $default  reduce using rule 10 (scalar_exp)


state 35

    9 scalar_exp: scalar_exp . '*' scalar_exp
   10           | scalar_exp . '/' scalar_exp
   11           | scalar_exp . '+' scalar_exp
   11           | scalar_exp '+' scalar_exp .
   12           | scalar_exp . '-' scalar_exp

    $default  reduce using rule 11 (scalar_exp)


state 36

    9 scalar_exp: scalar_exp . '*' scalar_exp
   10           | scalar_exp . '/' scalar_exp
   11           | scalar_exp . '+' scalar_exp
   12           | scalar_exp . '-' scalar_exp
   12           | scalar_exp '-' scalar_exp .

    $default  reduce using rule 12 (scalar_exp)
